--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,8 +1,19 @@
+html,body {
+    height: 100%;
+}
+
+
 body {
     font-size: 16px;
     line-height: 26px;
     color: $default;
     @extend %quicksand-500;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex-grow: 1;
 }
 
 .container {
@@ -10,4 +21,11 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 
+}
+
+a {
+    font-size: 16px;
+    line-height: 26px;
+    color: $default;
+    @extend %quicksand-500;
 }
