--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -74,6 +74,137 @@
 }
 
 
+.footer {
+    background-color: $bg;
+}
+
+.footer-top {
+    display: flex;
+    padding: 70px 0 40px;
+    border-bottom: 1px solid #ececec;
+
+    &__contact {
+        width: 250px;
+        margin-right: 50px;
+    }
+    &__nav {
+        width: 170px;
+        margin-right: 30px;
+    }
+
+    &__item-form {
+        max-width: 470px
+    }
+
+    &__logo {
+        display: block;
+        margin-bottom: 33px;
+
+    }
+
+    &__adress,
+    &__email,
+    &__phone {
+        display: inline-block;
+        margin-bottom: 13px;
+
+    }
+
+    &__social-list {
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+    }
+
+    &__social-item + .footer-top__social-item {
+        padding-left: 18px;
+
+    }
+
+    &__social-link {
+        transition: all .3s;
+        path {
+            fill: $default;
+        }
+
+        &:hover {
+            path {
+                fill: $accent;
+            }
+        }
+
+    }
+
+    &__title {
+        @extend %roboto-500;
+        color: $title;
+        margin-bottom: 40px;
+        font-size: 22px;
+        line-height: 1;
+    }
+
+    &__link {
+        margin-bottom: 13px;
+        display: block;
+      
+    }
+
+    &__text {
+        margin-bottom: 25px;
+    }
+
+    &__form-input {
+        max-width: 320px;
+        width: 100%;
+        background-color: #fff;
+        border: none;
+        padding: 12px 10px 12px 15px;
+        box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+        &::placeholder {
+            color: $default;
+            font-size: 16px;
+
+        }
+
+    }
+
+    &__form-btn {
+        background-color: $accent;
+        border: none;
+        padding: 12px 26px;
+        color: #fff;
+        text-transform: uppercase;
+        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+        cursor: pointer;
+
+    }
+}
+
+.footer-bot {
+    height: 75px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+
+
+   
+
+    &__accept {
+        
+    }
+
+    &__accept-img {
+        display: inline;
+        margin-left: 25px;
+        vertical-align: middle;
+
+    }
+}
+
+
+
+
 
 
 @import 'media';
