--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Quicksand-Regular', sans-serif;
+    font-family: 'Quicksand-Regular';
     font-weight: 400; // обязательно если medium - fw500
     font-style: normal; //если italic - italic
     src: local('Quicksand-Regular'), // если вдруг у пользователя этот шрифт есть на компе,
@@ -12,7 +12,7 @@
 }
 
 @font-face {
-    font-family: 'Quicksand-Medium', sans-serif;
+    font-family: 'Quicksand-Medium';
     font-weight: 500; 
     font-style: normal;
     src: local('Quicksand-Medium'), 
@@ -25,7 +25,7 @@
 }
 
 @font-face {
-    font-family: 'Roboto-Regular', sans-serif;
+    font-family: 'Roboto-Regular';
     font-weight: 400; 
     font-style: normal;
     src: local('Roboto-Regular'), 
@@ -38,7 +38,7 @@
 }
 
 @font-face {
-    font-family: 'Roboto-Medium', sans-serif;
+    font-family: 'Roboto-Medium';
     font-weight: 500; 
     font-style: normal;
     src: local('Roboto-Medium'), 
@@ -51,7 +51,7 @@
 }
 
 @font-face {
-    font-family: 'Roboto-Bold', sans-serif;
+    font-family: 'Roboto-Bold';
     font-weight: 700; 
     font-style: normal;
     src: local('Roboto-Bold'), 
