--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header {
@@ -169,12 +170,9 @@
     }
 
     &__form-btn {
-        background-color: $accent;
+        @extend %btn;
         border: none;
         padding: 12px 26px;
-        color: #fff;
-        text-transform: uppercase;
-        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
         cursor: pointer;
 
     }
@@ -197,6 +195,91 @@
         margin-left: 25px;
         vertical-align: middle;
 
+    }
+}
+
+.top-slider {
+    background-image: url('../images/top-slider bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: $bg;
+    padding-top: 65px;
+    padding-bottom: 44px;
+
+    &__container {
+        max-width: 1560px;
+    }
+
+    &__content {
+        padding-left: 175px;
+        padding-top: 125px;
+    }
+
+    &__item {
+        display: flex !important;
+        justify-content: space-between;
+    }
+
+    &__title {
+        max-width: 670px;
+        font-size: 58px;
+        line-height: 68px;
+        color: $title;
+        @extend %roboto-700;
+        margin-bottom: 35px;
+    }
+
+    &__text {
+        max-width: 470px;
+        margin-bottom: 55px;
+    }
+    &__link {
+        @extend %btn;
+        letter-spacing: 3px;
+        padding: 14px 36px;
+    }
+
+    .slick-dots {
+        display: flex;
+        justify-content: center;
+        margin-top: -70px;
+        li {
+            padding: 0 5px;
+            line-height: 0;
+            button {
+                padding: 0;
+                font-size: 0;
+                background-color: transparent;
+                width: 26px;
+                height: 26px;
+                border: 1px solid transparent;
+                border-radius: 50%;
+                position: relative;
+
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    background-color: $default;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+
+            }
+
+            &.slick-active {
+                button {
+                    border-color: $accent;
+                    &::before {
+                        background-color: $accent;
+                    }
+                }
+
+            }
+        }
     }
 }
 
