--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -76,6 +76,7 @@
 
 
 .footer {
+    margin-top: 44px;
     background-color: $bg;
 }
 
@@ -204,7 +205,6 @@
     background-size: cover;
     background-color: $bg;
     padding-top: 65px;
-    padding-bottom: 44px;
 
     &__container {
         max-width: 1560px;
@@ -242,7 +242,6 @@
     .slick-dots {
         display: flex;
         justify-content: center;
-        margin-top: -70px;
         li {
             padding: 0 5px;
             line-height: 0;
@@ -280,6 +279,158 @@
 
             }
         }
+    }
+}
+
+
+
+.categories-info {
+    padding: 120px 0;
+    background-image: url('../images/decor/categories-left.png');
+    background-repeat: no-repeat;
+    background-position: center left;
+
+    &__inner {
+        background-image: url('../images/decor/categories-right.png');
+        background-repeat: no-repeat;
+        background-position: center right;
+
+
+    }
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 110px;
+    position: relative;
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+    }
+
+    &::before {
+        background-image: url('../images/decor/decor-circles.svg');
+        top: -40px;
+        left: -45px;
+        width: 120px;
+        height: 121px;
+        z-index: -1;
+        
+    }
+
+    &::after {
+        background-image: url('../images/decor/decor-el.svg');
+        bottom: -23px;
+        right: -2px;
+        width: 65px;
+        height: 52px;
+        z-index: -1;
+
+    }
+
+    &__item {
+        background-color: #fff;
+        width: 370px;
+        padding: 60px 30px;
+        box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+
+
+
+    &__item-title {
+        color: $title;
+        font-size: 22px;
+        @extend %roboto-400;
+        margin-top: 35px;
+        margin-bottom: 10px;
+
+    }
+
+    &__item-text {
+        max-width: 296px;
+        
+    }
+}
+
+.categories {
+    &__items {
+        display: grid;
+        min-height: 635px;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(2,1fr);
+        grid-gap: 30px
+    }
+
+    &__item {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        padding-top: 35px;
+        padding-left: 40px;
+  
+        &:nth-child(1) {
+            grid-row: span 2;
+
+            .categories__item-subtitle,
+            .categories__item-link:hover {
+                color: #5800e4;
+            }
+
+
+        }
+
+        &:nth-child(2) {
+            grid-column: span 2;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-top: 0;
+
+
+            .categories__item-subtitle,
+            .categories__item-link:hover {
+                color: $accent;
+            }
+            
+        }
+
+        &:nth-child(3) {
+
+            .categories__item-subtitle,
+            .categories__item-link:hover {
+                color:#ffb534;
+            }
+            
+        }
+
+        &:nth-child(4) {
+
+            .categories__item-subtitle,
+            .categories__item-link:hover {
+                color: #34c3ff;
+            }
+            
+        }
+    }
+
+    &__item-subtitle {
+        margin-bottom: 5px;
+    }
+
+    &__item-title {
+        font-size: 22px;
+        color: $title;
+        margin-bottom: 16px;
+
+    }
+
+    &__item-link {
+        text-transform: uppercase;
+        color: $title;
+        @extend %roboto-400;
+        transition: all .35s
     }
 }
 
