--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -293,7 +293,7 @@
     &__inner {
         background-image: url('../images/decor/categories-right.png');
         background-repeat: no-repeat;
-        background-position: center right;
+        background-position: center right
 
 
     }
@@ -432,6 +432,48 @@
         @extend %roboto-400;
         transition: all .35s
     }
+}
+
+
+.video-fashion {
+    padding: 125px 0;
+    background-color: $bg;
+    background-image: url('../images/decor/pattern.svg');
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+
+    &__inner {
+        display: flex;
+
+    }
+
+    &__popup {
+        margin-right: 60px;
+        max-width: 530px;
+        height: 480px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+
+    &__content {
+        max-width: 570px
+    }
+
+    &__title {
+        text-align: left;
+    }
+
+
+
+
+
 }
 
 
