--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,3 @@
 //node_modules/slick-carousel/slick/slick.js
 @import '../../node_modules/slick-carousel/slick/slick.scss';
-@import '../../@fancyapps/fancybox/dist/jquery.fancybox.css';             
+@import '../../@fancyapps/ui/dist/fancybox/fancybox.css';  
