--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -148,7 +148,6 @@
     &__link {
         margin-bottom: 13px;
         display: block;
-      
     }
 
     &__text {
@@ -466,8 +465,24 @@
         max-width: 570px
     }
 
+    &__subtitle {
+        font-size: 22px;
+        color: $accent;
+        padding-top: 75px;
+        margin-bottom: 5px;
+        text-transform: uppercase;
+    }
+
     &__title {
         text-align: left;
+
+    }
+    &__text {
+        margin-bottom: 55px;
+    }
+
+    &__link {
+        @extend %btn;
     }
 
 
