--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -646,6 +646,83 @@
 }
 
 
+.promo {
+    background-image: url('../images/promo-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 150px 0 160px;
+    text-align: center;
+
+    &__inner {
+        max-width: 570px;
+        width: 100%;
+        margin-left: auto;
+    }
+
+    &__subtitle {
+        color: $accent;
+        text-transform: uppercase;
+        font-size: 22px;
+        margin-bottom: 10px;
+
+    }
+
+    &__link {
+        display: inline-block;
+        padding: 15px 28px;
+        background-color: transparent;
+        @extend %roboto-400;
+        letter-spacing: 2px;
+        color: $title;
+        border: 1px solid $accent;
+        text-transform: uppercase;
+        margin-top: 55px;
+
+    }
+
+    &__clock {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 55px;
+
+    }
+
+    &__clock-item {
+        background-color: #fff;
+        height: 120px;
+        width: 120px;
+        border-radius: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    } 
+
+    &__clock-item span {
+        font-size: 48px;
+        @extend %roboto-700;
+        color: $title;
+        margin-top: 12px;
+        margin-bottom: 7px;
+
+    }
+
+    &__text {
+        
+    }
+}
+
+.partners {
+    padding-top: 75px;
+    &__list {
+        display: flex;
+        height: 170px;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
 
 
 
