--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,4 @@
-@import 'vars';
+ @import 'vars';
 @import 'fonts';
 @import 'reset';
 @import 'libs';
@@ -195,6 +195,20 @@
         margin-left: 25px;
         vertical-align: middle;
 
+    }
+}
+
+
+.top {
+    &__container {
+        max-width: 1700px;
+        margin: 0 auto;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top center;
+        padding: 120px 0 130px;
+        text-align: center;
+        
     }
 }
 
