--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -852,10 +852,46 @@
         background-image: url('../images/icons/arrow.svg');
     }
 
-   
-
-
     
+}
+
+.page-404 {
+    padding: 110px 0 120px;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__content {
+        max-width: 570px;
+    }
+
+    &__title {
+        color: #28384f;
+        @extend %roboto-700;
+        margin-bottom: 20px;
+        font-size: 48px;
+        margin-bottom: 40px;
+
+    }
+
+    &__text {
+        max-width: 470px;
+        margin-bottom: 50px;
+
+    }
+
+    &__link {
+        background-color: $accent;
+        text-transform: uppercase;
+        color: #fff;
+        padding: 14px 35px;
+        @extend %roboto-400;
+        box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+
+    }
 }
 
 
