--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,4 +1,16 @@
 //node_modules/slick-carousel/slick/slick.js
-@import '../../node_modules/slick-carousel/slick/slick.scss';
-@import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css';  //ВОЗМОЖНО РЕШЕНИЕ
-@import '../../node_modules/rateyo/src/jquery.rateyo.css';  
+@import 'node_modules/slick-carousel/slick/slick';
+@import 'node_modules/@fancyapps/fancybox/dist/jquery.fancybox';  //ВОЗМОЖНО РЕШЕНИЕ
+@import 'node_modules/rateyo/src/jquery.rateyo';  
+@import 'node_modules/ion-rangeslider/css/ion.rangeSlider'; 
+@import 'node_modules/jquery-form-styler/dist/jquery.formstyler'; 
+@import 'node_modules/jquery-form-styler/dist/jquery.formstyler.theme'; 
+
+
+
+
+
+
+
+
+
