--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,7 @@
- @import 'vars';
+@import 'vars';
 @import 'fonts';
-@import 'reset';
 @import 'libs';
+@import 'reset';
 @import 'global';
 
 .header {
@@ -650,16 +650,6 @@
     margin: 0 auto;
 }
 
-.jq-ry-normal-group{
-    display: none;
-    
-}
-
-.jq-ry-rated-group {
-    width: auto !important;
-}
-
-
 .promo {
     background-image: url('../images/promo-bg.jpg');
     background-repeat: no-repeat;
@@ -894,6 +884,353 @@
     }
 }
 
+.shop {
+    padding: 120px 0 105px;
+    &__inner {
+        display: flex;
+    }
+
+    &__filters {
+        width: 370px;
+        margin-right: 30px;
+    }
+
+}
+
+.filter {
+    &__item {
+        padding: 35px 30px 40px;
+        border: 1px solid #ececec;
+        margin-bottom: 40px;
+        
+    }
+
+    &__title {
+        color: $title;
+        text-transform: uppercase;
+        font-size: 22px;
+        @extend %roboto-400;
+        margin-bottom: 25px;
+    }
+}
+
+.filter-search {
+    &__form {
+        display: flex;
+    }
+    &__input {
+        border: none;
+        background-color: $bg;
+        height: 50px;
+        padding: 0 5px 0 15px;
+        width: 260px;
+    }
+
+    &__btn {
+        display: inline-flex;
+        border: none;
+        height: 50px;
+        width: 50px;
+        padding: 0;
+        margin: 0;
+        background-color: $accent;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+    }
+    
+}
+
+.filter-price {
+    
+    &__label {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 30px;
+    }
+
+    span {
+
+    }
+
+    &__btn {
+        @extend %btn;
+        border: none;
+        cursor: pointer;
+    }
+}
+
+
+.filter-color {
+    &__label {
+        padding-bottom: 20px;
+        border-bottom: 1px solid #ececec;
+        display: flex;
+        justify-content: space-between;
+
+        & + .filter-color__label {
+            padding-top: 20px;
+        }
+
+        &:last-child {
+            border-bottom: none;
+            padding-bottom: 0;
+        }
+    }
+
+    &__input {
+        @extend %checkbox-hidden; 
+
+        &:checked + .filter-color__checkbox {
+            background-image: url('../images/icons/checked.png');
+            background-repeat: no-repeat;
+            background-position: center;
+
+
+        }
+
+
+
+    }
+
+
+    &__checkbox {
+        position: absolute;
+        margin-left: -16px;
+        margin-top: 7px;
+        width: 16px;
+        height: 16px;
+        
+    }
+
+    &__checkbox--blue {
+        background-color: #00aeef;
+
+    }
+
+    &__checkbox--red {
+        background-color: #f52574;
+
+    }
+
+    &__checkbox--yellow {
+        background-color: #eff702;
+
+    }
+
+    &__checkbox--orange {
+        background-color: #ff7e00;
+
+    }
+
+    &__checkbox--black {
+        background-color: #000;
+
+    }
+
+    &__checkbox--purple {
+        background-color: #923899;
+
+    }
+}
+
+.filter-size {
+
+    &__label {
+        display: block;
+        padding-left: 35px;
+        margin-bottom: 20px;
+    }
+
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked  + .filter-size__checkbox {
+            background-image: url('../images/check-hover.svg');
+            border: none;
+            & + .filter-size__text {
+                color: $accent;
+            }
+        }
+
+      
+    }
+
+    &__checkbox {
+        width: 20px;
+        height: 20px;
+        border: 1px solid $default;
+        border-radius: 50%;
+        position: absolute;
+        margin-left: -35px;
+        margin-top: 2px;
+
+    }
+
+}
+
+
+.filter-category {
+
+    &__label {
+        display: block;
+        margin-bottom: 15px;
+        cursor: pointer;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    &__input {
+        @extend %checkbox-hidden;
+
+        &:checked + .filter-category__checkbox {
+            background-color: $accent;
+            color: #fff;
+
+        }
+
+
+
+    }
+
+    &__checkbox {
+        background-color: #f6f6f6;
+        color: $title;
+        
+        display: flex;
+        justify-content: space-between;
+        padding: 16px 20px;
+    }
+}
+
+
+.filter-popular {
+    &__label {
+        display: inline-block;
+        padding: 10px 0;
+        margin-bottom: 20px;
+        margin-right: 8px;
+        cursor: pointer;
+ 
+    }
+
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked + .filter-popular__checkbox {
+            border: 1px solid transparent;
+            background-color: $accent;
+            color: #fff;
+
+
+        }
+    }
+
+    &__checkbox {
+        padding: 10px 20px;
+        border: 1px solid $default;
+
+    }
+}
+
+
+.shop-content {
+    width: 100%;
+
+    &__filter {
+        border: 1px solid #ececec;
+        padding: 20px 25px 20px 30px;
+        margin-bottom: 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    &__filter-buttons {
+        display: flex;
+        align-items: center;
+
+    }
+
+  
+
+    &__filter-btn {
+        border: none;
+        background-color: transparent;
+        margin-left: 15px;
+        cursor: pointer;
+        line-height: 0;
+        &.shop-content__filter-btn--active
+        path {
+            fill: $accent;
+        }
+
+    }
+
+    &__filter-select {
+
+    }
+
+    &__filter-sort,
+    &__filter-show{
+        border: none;
+        color: $default;
+
+
+    }
+
+    
+
+    &__filter-show {
+
+    }
+}
+
+.irs--flat {
+    height: 30px;
+}
+.irs--flat .irs-line {
+    height: 5px;
+    background-color: #ececec;
+    border-radius: 0;
+    top: 13px;
+}
+
+.irs--flat .irs-bar {
+    height: 5px;
+    color: $accent;
+    top: 13px;
+}
+
+
+.irs--flat .irs-handle {
+    background-color: #fff;
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+    top: 0;
+}
+
+.irs--flat .irs-min, .irs--flat .irs-max{
+    display: none;
+}
+
+
+.irs-from, .irs-to, .irs-single {
+    display: none;
+}
+
+
+
+.irs-grid {
+    display: none;
+}
+
+
+.irs--flat .irs-handle>i:first-child {
+    display: none;
+}
 
 
 
