--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -531,6 +531,8 @@
 
     &.product-item--list {
         min-width: 100%;
+        display: flex;
+        text-align: left;
         &:hover {
             .product-item__link-box {
 
@@ -538,9 +540,14 @@
             }
         }
 
+        .shop-content__inner {
+           
+        }
+
         .product-item__img-box {
             height: 250px;
-            width: 200px;
+            min-width: 200px;
+            margin-bottom: 0;
 
             img {
                 height: 250px;
@@ -567,8 +574,75 @@
             .product-item__link--line {
                 display: none;
             }
+
+
         }
         
+        .product-item__content-box {
+            display: block;
+        }
+
+        .product-item__wrapper-box {
+            padding: 30px 40px;
+            border: 1px solid #ececec;
+            border-left: none;
+        }
+
+        .product-item__box{
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .product-item__title {
+            order: -1;
+            width: 100%;
+            padding: 0;
+            margin-bottom: 10px;
+            margin-top: 4px;
+        }
+
+        .product-item__price {
+            order: -1;
+            margin-left: -12px;
+        }
+
+        .star {
+            margin: 0;
+            margin-left: 20px;
+            margin-top: 2px;
+        }
+
+        .product-item__txt {
+            margin-bottom: 20px;
+        }
+
+        .product-item__btn {
+            padding: 11px 40px;
+            border: none;
+            background-color: $title;
+            color: #fff;
+            transition: all .35s;
+            
+
+            &:hover {
+                background-color: $accent;
+                box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+
+            }
+        }
+
+
+        .product-item__img-box::before {
+            display: none;
+
+        }
+
+       
+    }
+
+
+    &__content-box {
+        display: none;
     }
 
 
@@ -1185,6 +1259,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        border-bottom: 1px solid #ececec;
         .product-item {
             margin-bottom: 40px;
         }
@@ -1239,6 +1314,8 @@
 
     }
 }
+
+
 
 
 .jq-selectbox__select {
