added main part of shop page

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -45,6 +45,16 @@ $bg: #f6f6f6;
         position: absolute;
 }
 
+
+
+%radio-hidden {
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    position: absolute;
+}
+
 @function max($numbers...) {
     @return m#{a}x(#{$numbers});
 }
