--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1316,6 +1316,328 @@
 }
 
 
+.product-page {
+    padding: 120px 0 60px;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.product-one {
+
+    &__inner {
+        display: flex;
+    }
+
+    &__slide {
+        width: 730px;
+        margin-right: 70px;
+    }
+
+
+    &__content {
+        width: 370px;
+    }
+
+    &__title {
+        color: $title;
+        margin-bottom: 20px;
+        font-size: 20px;
+    }
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    &__price {
+        display: flex;
+
+    }
+
+    &__price-new {
+        font-size: 18px;
+        color: $title;
+    }
+
+    &__price-old {
+        padding-left: 15px;
+        text-decoration: line-through;
+        
+    }
+
+
+    &__star {
+        display: flex;
+        align-items: center;
+
+        span {
+            padding-left: 8px;
+            color: $title;
+            font-size: 22px;
+        }
+    }
+
+    &__text {
+        margin-bottom: 30px;
+        span {
+            display: block;
+            color: $title;
+            @extend %roboto-400;
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+    }
+
+    &__num {
+
+    }
+
+    &__btn {
+        padding: 14px 35px;
+        background-color: $accent;
+        color: #fff;
+        border: none;
+        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+        margin-left: 14px;
+        cursor: pointer;
+
+    }
+
+      
+
+}
+
+
+
+.jq-number__field {
+    width: 114px;
+    border: 1px solid #f0f0f0;
+}
+
+
+.jq-number__field input {
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    @extend %quicksand-500;
+    text-align: center;
+    color: $title;
+}
+
+.jq-number {
+    padding: 0;
+    position: relative;
+}
+
+.jq-number__spin {
+    position: absolute;
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.jq-number__spin.minus {
+    left: 15px;
+}
+
+.jq-number__spin.plus {
+    right: 15px;
+}
+
+
+
+.jq-number__spin .minus {
+    right: auto;
+    left: 15px;
+
+}
+
+
+.jq-number__spin::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 0;
+    background-color: $title;
+    width: 13px;
+    height: 1px;
+}
+
+.jq-number__spin.plus::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 6px;
+    background-color: $title;
+    width: 1px;
+    height: 13px;
+}
+
+// .jq-number__spin.minus:after {
+//     left: -25px;
+//     top: 7px;
+// }
+
+
+
+.product-slide {
+    display: flex;
+
+    .slick-vertical .slick-slide {
+        margin-bottom: 30px;
+        height: 140px;
+    }
+
+    &__thumb {
+        width: 140px;
+        margin-right: 30px;
+
+    }
+
+    &__thumb-one {
+        margin-bottom: 30px;
+        width: 140px;
+        height: 140px;
+        cursor: pointer;
+        img {
+            width: 140px;
+            height: 140px;
+            object-fit: cover;
+        }
+    }
+
+    &__big {
+        width: 560px;
+        img {
+            width: 560px;
+            height: 650px;
+            object-fit: cover;
+        }
+    }
+
+}
+
+
+
+.product-info {
+    &__list {
+        margin-bottom: 28px;
+
+    }
+
+    &__item {
+        margin-bottom: 5px;
+        display: flex;
+
+
+    }
+
+    &__title {
+        min-width: 100px;
+        color: $title;
+
+    }
+
+
+    &__link {
+        path {
+          fill: $default; 
+        }
+        
+        & + .product-info__link {
+            margin-left: 15px;
+        }
+
+        &:hover {
+            path {
+               fill: $accent; 
+            }
+            
+        }
+    }
+}
+
+.product-filters {
+
+    &__color {
+        margin-bottom: 25px;
+        label {
+            margin-right: 10px;
+
+        }
+    }
+
+    &__color-input {
+        @extend %radio-hidden;
+        &:checked {
+            & +.product-filters__color-checkbox {
+                border: 1px solid $accent;
+
+            }
+        }
+    }
+
+    &__color-checkbox {
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+        border: 1px solid #ccccce;
+        position: relative;
+        display: inline-block;
+        span {
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            top: 3px;
+            left: 3px;
+        }
+
+
+    }
+
+    &__color-title,
+    &__size-title {
+        margin-bottom: 5px;
+        font-size: 18px;
+        @extend %roboto-400;
+        color: $title;
+    }
+
+    &__size {
+        margin-bottom: 35px; 
+        label {
+            margin-right: 10px;
+            display: inline-block;
+
+        }
+    }
+
+    &__size-input {
+        @extend %radio-hidden;
+        &:checked {
+            & +.product-filters__size-checkbox {
+                border: 1px solid $accent;
+
+            }
+    }
+
+
+    }   
+
+    &__size-checkbox {
+        padding: 4px 12px;
+        border: 1px solid #ececec;
+        display: inline-block;
+    }
+
+}
+
+
+
+
 
 
 .jq-selectbox__select {
