--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1716,6 +1716,200 @@
 
 
 
+.product-tabs {
+    padding-top: 110px;
+
+
+    &__top {
+        border-bottom: 1px solid #f0f0f0;
+        margin-bottom: 40px;
+       
+    }
+
+    &__top-item {
+        @extend %roboto-400;
+        font-size: 22px;
+        margin-bottom: 10px;
+        display: inline-block;
+
+        & + .product-tabs__top-item {
+            margin-left: 55px;
+        } 
+    }
+
+    &__top-item--active {
+        color: $title;
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: "";
+            bottom: -11px;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 1px;
+            background-color: $accent;
+
+        }
+    }
+
+    &__content-item {
+        display: none;
+
+        &.product-tabs__content-item--active {
+            display: block;
+        }
+    }
+
+}
+
+.comments {
+    margin-bottom: 40px;
+    display: flex;
+
+    &__img {
+        width: 71px;
+        height: 71px;
+        margin-right: 30px;
+        border-radius: 50%;
+        object-fit: cover;
+
+    }
+
+    &__content-top {
+        display: flex;
+        margin-bottom: 10px;
+    }
+
+    &__content-name {
+        color: $title;
+        margin-right: 13px;
+        @extend %roboto-400;
+
+
+    }
+
+    &__content-date {
+        padding-left: 13px;
+    }
+
+    &__content-star {
+        margin: 0 0 0 auto;
+     
+        
+
+    }
+
+    &__content-text {
+        margin-bottom: 10px;
+    }
+
+    &__content-reply {
+        display: inline-block;
+        padding-left: 25px;
+        position: relative;
+        &::before {
+            position: absolute;
+            content: "";
+            background-image: url('../images/left-arrow.svg');
+            background-repeat: no-repeat;
+            width: 15px;
+            height: 13px;
+            left: 0;
+            top: 7px;
+        }
+    }
+}
+
+
+.comments__form {
+
+
+    &-title {
+        font-size: 22px;
+        color: $title;
+        position: relative;
+        padding-bottom: 10px;
+        margin-bottom: 32px;
+        @extend %roboto-400;
+
+        &::after {
+            position: absolute;
+            content: "";
+            background-color: $accent;
+            bottom: 0px;
+            left: 0;
+            width: 50px;
+            height: 2px;
+        }
+    }
+
+
+
+    &-rating {
+        margin-bottom: 30px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    &-inputs {
+        margin-bottom: 15px;
+        display: flex;
+        justify-content: space-between;
+
+
+    }
+
+    &-inputes {
+        display: inline-block;
+        width: 570px;
+        height: 50px;
+        padding: 13px 0 13px 20px;
+        border: 1px solid #efefef;
+
+    }
+
+    .comments__form-inputes--1 {
+        margin-right: 25px;
+    }
+
+
+    &-textarea {
+        padding-top: 20px;
+        padding-left: 20px;
+        width: 100%;
+        height: 225px;
+        border: 1px solid #efefef;
+        margin-bottom: 40px;
+        resize: none;
+    }
+
+    &-btn {
+        display: inline-block;
+        padding: 15px 35px;
+        text-transform: uppercase;
+        background-color: $accent;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+
+    }
+
+}
+
+
 
 
 
