--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1963,6 +1963,108 @@
 }
 
 
+.blog-box {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 22px;
+    justify-content: flex-start;
+
+    &__author,
+    &__date {
+        padding-left: 30px;
+        position: relative;
+    
+        &::before {
+        position: absolute;
+        content: "";
+        height: 20px;
+        width: 20px;
+        left: 0;
+        top: 2px;
+        }
+
+    }
+
+    &__author {
+        margin-right: 30px;
+    }
+
+    &__author::before {
+        background-image: url('../images/icons/user-grey.svg');
+        background-repeat: no-repeat;
+    }
+
+    &__date {
+        background-image: url('../images/icons/time.svg');
+        background-repeat: no-repeat;
+    }
+
+}
+
+
+.blog-page {
+    padding: 120px 0 60px;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__content {
+        width: 770px;
+        margin-right: 30px;
+    }
+
+    &__aside {
+        width: 370px;
+    }
+
+    &__item {
+        margin-bottom: 60px;
+
+        &.blog-page__item--no-image {
+            border-top: 1px solid #ececec;
+            box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);
+        
+        }
+
+    }
+
+    &__link {
+        display: block;
+    }
+
+    &__img {
+        max-width: 770px;
+        height: 450px;
+        object-fit: cover;
+        display: block;
+    }
+
+    &__item-box {
+        border: 1px solid #ececec;
+        border-top: none;
+        padding: 40px;
+    }
+
+    &__item-title {
+        color: $title;
+        font-size: 22px;
+        @extend %roboto-500;
+        margin-bottom: 20px;
+        transition: all .3s ease;
+
+        &:hover {
+            color: $accent;
+        }
+    }
+
+}
+
+
+
+
+
 
 
 
