--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2005,6 +2005,56 @@
 .blog-page {
     padding: 120px 0 60px;
 
+    &__item--slider {
+        .blog-page__item-box {
+            margin-top: -8px;
+        }
+    }
+
+    &__slider {
+
+        .slick-next,
+        .slick-prev {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 5;
+            width: 40px;
+            height: 40px;
+            background-color: $accent;
+            border: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+            cursor: pointer;
+
+            path {
+                fill: #fff;
+            }
+        }
+
+
+        .slick-prev {
+            left: 40px;
+        
+        }
+
+        .slick-next {
+            right: 40px;
+        }
+
+        .slick-disabled {
+            box-shadow: 0px 7px 20px 0px rgba(168, 168, 168, 0.3);
+            background-color: #fff;
+            path {
+                fill: $accent;
+            }
+        }
+    }
+
+
     &__inner {
         display: flex;
         justify-content: space-between;
@@ -2062,6 +2112,124 @@
 }
 
 
+.person {
+    padding: 40px 25px;
+    border: 1px solid #ececec;
+    text-align: center;
+    margin-bottom: 40px;
+
+
+    &__img {
+        display: inline-block;
+        width: 160px;
+        height: 160px;
+        object-fit: cover;
+        margin-bottom: 35px;
+    }
+
+    &__name {
+        color: $title;
+        @extend %roboto-700;
+        margin-bottom: 10px;
+        font-size: 18px;
+    }
+
+    &__post {
+        color: $accent;
+        margin-bottom: 25px;
+
+    }
+
+    &__text {
+        margin-bottom: 25px;
+    }
+
+    &__social-link {
+        margin: 0 8px;
+        path {
+            fill: $default;
+            transition: all .35s;
+        }
+
+        &:hover {
+            path {
+                fill: $accent;
+            }
+        }
+    }
+
+
+}
+
+
+.latest-post {
+    padding: 40px 28px;
+    justify-content: space-between;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+
+    &__item {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid #ececec;
+        padding-bottom: 23px;
+        padding-top: 20px;
+
+        &:last-child {
+            border-bottom: none;
+            padding-bottom: 0;
+        }
+
+    }
+
+    &__title {
+        font-size: 22px;
+        color: $title;
+        @extend %roboto-400;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+    }
+
+    &__img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        
+    }
+
+    &__box-title {
+        font-size: 18px;
+        color: $title;
+        @extend %roboto-400;
+        margin-bottom: 10px;
+        max-width: 211px;
+    }
+
+    &__box {
+        display: flex;
+
+    }
+
+    &__img-link {
+        display: block;
+        margin-right: 20px;
+    }
+
+    &__date {
+        padding-left: 28px;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url('../images/icons/calendar.svg');
+            background-repeat: no-repeat;
+            width: 16px;
+            height: 16px;
+            left: 0;
+            top: 3px;
+        }
+    }
+}
 
 
 
