--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -154,6 +154,10 @@
         margin-bottom: 25px;
     }
 
+    &__form {
+        display: flex;
+    }
+
     &__form-input {
         max-width: 320px;
         width: 100%;
@@ -161,6 +165,7 @@
         border: none;
         padding: 12px 10px 12px 15px;
         box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+        margin-right: 10px;
         &::placeholder {
             color: $default;
             font-size: 16px;
